[gd_scene load_steps=13 format=2]

[ext_resource path="res://Tilecostumes/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level14.gd" type="Script" id=4]
[ext_resource path="res://Teleporters/GreenTeleporter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tilecostumes/Redtile.tscn" type="PackedScene" id=7]
[ext_resource path="res://ExitSprite.tscn" type="PackedScene" id=8]
[ext_resource path="res://ColorOrbs/BlueColorOrb.tscn" type="PackedScene" id=9]
[ext_resource path="res://ColorOrbs/RedColorOrb.tscn" type="PackedScene" id=10]
[ext_resource path="res://Switches/RedSwitch.tscn" type="PackedScene" id=11]
[ext_resource path="res://Teleporters/TeleportTimer.tscn" type="PackedScene" id=12]
[ext_resource path="res://Switches/BlueSwitch.tscn" type="PackedScene" id=18]

[node name="Level14" type="Node2D"]
script = ExtResource( 4 )
level_num = 14
switch_init = [ [ 0, "2" ], [ 0, "4" ] ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 384, 400 )

[node name="ExitSprite" parent="." instance=ExtResource( 8 )]
position = Vector2( 384, 100 )

[node name="Tile" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, 432 )

[node name="Tile2" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 432 )

[node name="Tile3" parent="." instance=ExtResource( 1 )]
position = Vector2( 272, 432 )

[node name="Tile4" parent="." instance=ExtResource( 1 )]
position = Vector2( 304, 432 )

[node name="Tile5" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 432 )

[node name="Tile6" parent="." instance=ExtResource( 1 )]
position = Vector2( 368, 432 )

[node name="Tile7" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 431 )

[node name="Tile8" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 432 )

[node name="Tile9" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 432 )

[node name="Tile10" parent="." instance=ExtResource( 1 )]
position = Vector2( 112, 432 )

[node name="Tile11" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 432 )

[node name="Tile12" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 432 )

[node name="Tile13" parent="." instance=ExtResource( 1 )]
position = Vector2( 592, 432 )

[node name="Tile14" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 432 )

[node name="Tile15" parent="." instance=ExtResource( 1 )]
position = Vector2( 656, 432 )

[node name="Tile16" parent="." instance=ExtResource( 1 )]
position = Vector2( 688, 432 )

[node name="Tile17" parent="." instance=ExtResource( 1 )]
position = Vector2( 720, 432 )

[node name="Tile18" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 432 )

[node name="Tile19" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 432 )

[node name="Tile20" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, 432 )

[node name="Tile21" parent="." instance=ExtResource( 1 )]
position = Vector2( 464, 432 )

[node name="Tile22" parent="." instance=ExtResource( 1 )]
position = Vector2( 496, 432 )

[node name="Tile23" parent="." instance=ExtResource( 1 )]
position = Vector2( 528, 432 )

[node name="Tile24" parent="." instance=ExtResource( 1 )]
position = Vector2( 560, 432 )

[node name="GreenTeleporter" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 456, 380 )

[node name="GreenTeleporter2" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 536, 380 )

[node name="GreenTeleporter3" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 616, 380 )

[node name="GreenTeleporter4" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 312, 380 )

[node name="GreenTeleporter5" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 232, 380 )

[node name="GreenTeleporter6" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 152, 380 )

[node name="Tile25" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, 144 )

[node name="Tile26" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 144 )

[node name="Tile27" parent="." instance=ExtResource( 1 )]
position = Vector2( 272, 144 )

[node name="Tile28" parent="." instance=ExtResource( 1 )]
position = Vector2( 304, 144 )

[node name="Tile29" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 144 )

[node name="Tile30" parent="." instance=ExtResource( 1 )]
position = Vector2( 368, 144 )

[node name="Tile31" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 144 )

[node name="Tile83" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 16 )

[node name="Tile32" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 144 )

[node name="Tile33" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 144 )

[node name="Tile34" parent="." instance=ExtResource( 1 )]
position = Vector2( 112, 144 )

[node name="Tile35" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 144 )

[node name="Tile36" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 144 )

[node name="Tile37" parent="." instance=ExtResource( 1 )]
position = Vector2( 592, 144 )

[node name="Tile38" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 144 )

[node name="Tile39" parent="." instance=ExtResource( 1 )]
position = Vector2( 656, 144 )

[node name="Tile40" parent="." instance=ExtResource( 1 )]
position = Vector2( 688, 144 )

[node name="Tile41" parent="." instance=ExtResource( 1 )]
position = Vector2( 720, 144 )

[node name="Tile42" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 144 )

[node name="Tile43" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 144 )

[node name="Tile44" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, 144 )

[node name="Tile45" parent="." instance=ExtResource( 1 )]
position = Vector2( 464, 144 )

[node name="Tile46" parent="." instance=ExtResource( 1 )]
position = Vector2( 496, 144 )

[node name="Tile47" parent="." instance=ExtResource( 1 )]
position = Vector2( 528, 144 )

[node name="Tile48" parent="." instance=ExtResource( 1 )]
position = Vector2( 560, 144 )

[node name="GreenTeleporter7" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 456, 92 )

[node name="GreenTeleporter8" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 536, 92 )

[node name="GreenTeleporter9" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 616, 92 )

[node name="GreenTeleporter10" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 312, 92 )

[node name="GreenTeleporter11" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 232, 92 )

[node name="GreenTeleporter12" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 152, 92 )

[node name="Tile49" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, 272 )

[node name="Tile50" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 272 )

[node name="Tile51" parent="." instance=ExtResource( 1 )]
position = Vector2( 272, 272 )

[node name="Tile52" parent="." instance=ExtResource( 1 )]
position = Vector2( 304, 272 )

[node name="Tile53" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 272 )

[node name="Tile54" parent="." instance=ExtResource( 1 )]
position = Vector2( 368, 272 )

[node name="Tile55" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 272 )

[node name="Tile73" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 240 )

[node name="Tile74" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 208 )

[node name="Tile75" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 176 )

[node name="Tile80" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 112 )

[node name="Tile81" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 80 )

[node name="Tile82" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 48 )

[node name="Tile76" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 400 )

[node name="Tile77" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 368 )

[node name="Tile78" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 336 )

[node name="Tile79" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 304 )

[node name="Tile84" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 16 )

[node name="Tile85" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 240 )

[node name="Tile86" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 208 )

[node name="Tile87" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 176 )

[node name="Tile88" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 112 )

[node name="Tile89" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 80 )

[node name="Tile90" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 48 )

[node name="Tile91" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 400 )

[node name="Tile92" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 368 )

[node name="Tile93" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 336 )

[node name="Tile94" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 304 )

[node name="Tile56" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 272 )

[node name="Tile57" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 272 )

[node name="Tile58" parent="." instance=ExtResource( 1 )]
position = Vector2( 112, 272 )

[node name="Tile59" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 272 )

[node name="Tile60" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 272 )

[node name="Tile61" parent="." instance=ExtResource( 1 )]
position = Vector2( 592, 272 )

[node name="Tile62" parent="." instance=ExtResource( 1 )]
position = Vector2( 624, 272 )

[node name="Tile63" parent="." instance=ExtResource( 1 )]
position = Vector2( 656, 272 )

[node name="Tile64" parent="." instance=ExtResource( 1 )]
position = Vector2( 688, 272 )

[node name="Tile65" parent="." instance=ExtResource( 1 )]
position = Vector2( 720, 272 )

[node name="Tile66" parent="." instance=ExtResource( 1 )]
position = Vector2( 752, 272 )

[node name="Tile67" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 272 )

[node name="Tile68" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, 272 )

[node name="Tile69" parent="." instance=ExtResource( 1 )]
position = Vector2( 464, 272 )

[node name="Tile70" parent="." instance=ExtResource( 1 )]
position = Vector2( 496, 272 )

[node name="Tile71" parent="." instance=ExtResource( 1 )]
position = Vector2( 528, 272 )

[node name="Tile72" parent="." instance=ExtResource( 1 )]
position = Vector2( 560, 272 )

[node name="GreenTeleporter13" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 456, 220 )

[node name="GreenTeleporter14" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 536, 220 )

[node name="GreenTeleporter15" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 616, 220 )

[node name="GreenTeleporter16" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 312, 220 )

[node name="GreenTeleporter17" parent="." groups=[
"nonGroup",
] instance=ExtResource( 5 )]
position = Vector2( 232, 220 )

[node name="GreenTeleporter18" parent="." groups=[
"switch",
] instance=ExtResource( 5 )]
position = Vector2( 152, 220 )

[node name="BlueSwitch" parent="." groups=[
"switch0",
] instance=ExtResource( 18 )]
position = Vector2( 384, 240 )

[node name="BlueColorOrb" parent="." groups=[
"switch1",
] instance=ExtResource( 9 )]
position = Vector2( 64, 220 )

[node name="Redtile" parent="." groups=[
"switch3",
] instance=ExtResource( 7 )]
position = Vector2( 352, 112 )

[node name="Redtile2" parent="." groups=[
"switch3",
] instance=ExtResource( 7 )]
position = Vector2( 416, 112 )

[node name="Redtile3" parent="." groups=[
"switch3",
] instance=ExtResource( 7 )]
position = Vector2( 416, 68 )

[node name="Redtile4" parent="." groups=[
"switch3",
] instance=ExtResource( 7 )]
position = Vector2( 352, 68 )

[node name="Redtile5" parent="." groups=[
"switch3",
] instance=ExtResource( 7 )]
position = Vector2( 384, 52 )

[node name="RedColorOrb" parent="." groups=[
"switch2",
] instance=ExtResource( 10 )]
visible = false
position = Vector2( 64, 380 )

[node name="RedSwitch" parent="." groups=[
"switch4",
] instance=ExtResource( 11 )]
visible = false
position = Vector2( 384, 400 )

[node name="TeleportTimer" parent="." instance=ExtResource( 12 )]

[connection signal="restart" from="Player" to="." method="_on_Player_restart"]
[connection signal="body_entered" from="ExitSprite" to="Player" method="_on_ExitSprite_body_entered"]
[connection signal="body_entered" from="ExitSprite" to="CanvasLayer/UI" method="_on_ExitSprite_body_entered"]
[connection signal="teleportPlayer" from="GreenTeleporter" to="GreenTeleporter5" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter2" to="GreenTeleporter12" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter3" to="GreenTeleporter18" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter4" to="GreenTeleporter17" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter5" to="GreenTeleporter3" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter6" to="GreenTeleporter11" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter7" to="GreenTeleporter" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter8" to="GreenTeleporter12" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter9" to="GreenTeleporter16" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter10" to="GreenTeleporter2" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter11" to="GreenTeleporter14" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter12" to="GreenTeleporter4" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter13" to="GreenTeleporter15" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter14" to="GreenTeleporter9" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter15" to="GreenTeleporter7" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter16" to="GreenTeleporter8" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter17" to="GreenTeleporter5" method="_on_Teleporter_teleportPlayer"]
[connection signal="teleportPlayer" from="GreenTeleporter18" to="GreenTeleporter2" method="_on_Teleporter_teleportPlayer"]
[connection signal="switchon" from="BlueSwitch" to="." method="_on_Switch_switchon"]
[connection signal="switchoff" from="RedSwitch" to="." method="_on_Switch1_switchoff"]
[connection signal="switchon" from="RedSwitch" to="." method="_on_Switch1_switchon"]
